# realsim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  README.md  appveyor.yml
.github/workflows/: ci.yml
Materials/Material/: diffuse_mat.yml
Materials/RootSignatures/: basic_rootsignature.yml  pbr_rootsig.yml
Shaders/: Cook_Torrance.ps.hlsl  Cook_Torrance.vs.hlsl  Microfacet_BRDF.hlsl  blinnphong.ps.hlsl  diffuse.psh  diffuse.vsh  microfacet_brdf.hlsl  pixel.hlsl  pixel.psh  vertex.hlsl  vertex.vsh
app/: main.cpp
assetbaker/: CMakeLists.txt
assetbaker/include/assetbaker/: Application.h  Defaults.h  Logger.h  MeshBaker.h  ScopedTimer.h  Timer.h
assetbaker/src/: Application.cpp  Logger.cpp  Main.cpp  MeshBaker.cpp  ScopedTimer.cpp  Timer.cpp
assetlibrary/: CMakeLists.txt
assetlibrary/include/assetlib/: AssetLoader.h  FileHelper.h  MeshLoader.h
assetlibrary/src/: AssetLoader.cpp  FileHelper.cpp  MeshLoader.cpp
cmake/: ConfigSafeGuards.cmake  Misc.cmake
include/: RealSimConfig.h.in
include/realsim/: BasicTypes.h  realsim.h
include/realsim/core/: Assert.h  Input.h  Logger.h  Window.h  application.h
include/realsim/ecs/: CommonComponents.h  Entity.h  Link.h  MeshComponent.h  Scene.h
include/realsim/editor/: CameraController.h  Layer.h  UILayer.h
include/realsim/graphics/: CommandAllocator.h  CommandQueue.h  Exception.h  FreeListAllocator.h  GraphicsDevice.h  GraphicsResource.h  Helpers.h  MemoryAllocation.h  MemoryAllocator.h  RealSimGraphics.h  Renderer.h  RendererConfiguration.h  RootSignature.h  RootSignatureFileDeserializer.h  Shader.h  ShaderCompiler.h  ShaderReflection.h  SwapChain.h  UploadBuffer.h
include/realsim/graphics-de/: ImGuiHelpers.h  Material.h  Renderer.h  StaticMeshBuffer.h
include/realsim/math/: Alignment.h
include/realsim/serialization/: YAML.h
mesh_assets/: monkey0.rsim  untitled0.rsim
src/realsim/: realsim.h
src/realsim/core/: App.cpp  App.h  Application.h  Assert.h  Input.cpp  Input.h  Logger.cpp  Window.cpp  Window.h  application.cpp
src/realsim/ecs/: CameraComponent.cpp  CameraComponent.h  CommonComponents.cpp  CommonComponents.h  Entity.cpp  Entity.h  Link.cpp  MeshComponent.cpp  MeshComponent.h  PerspectiveCameraComponent.h  Scene.cpp  Scene.h
src/realsim/editor/: CameraController.cpp  CameraController.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  UILayer.cpp  UILayer.h
src/realsim/graphics/: CommandAllocator.cpp  CommandQueue.cpp  Exception.cpp  FreeListAllocator.cpp  GraphicsDevice.cpp  GraphicsResource.cpp  Helpers.cpp  MemoryAllocation.cpp  MemoryAllocator.cpp  RealSimGraphics.cpp  Renderer.cpp  RendererConfiguration.cpp  RootSignature.cpp  RootSignatureFileDeserializer.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderReflection.cpp  SwapChain.cpp  UploadBuffer.cpp
src/realsim/graphics-de/: AssetCache.cpp  AssetCache.h  Drawable.cpp  Drawable.h  EngineInitialization.cpp  EngineInitialization.h  ImGuiHelpers.cpp  Material.cpp  Material.h  Renderer.cpp  Renderer.h  StaticMeshBuffer.cpp
src/realsim/math/: Alignment.cpp
src/realsim/serialization/: YAML.cpp
src/realsim/ui/: CameraController.cpp  CameraController.h  EditorLayer.cpp  EditorLayer.h  Gizmo.cpp  Gizmo.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  SceneViewWidget.cpp  SceneViewWidget.h  imgui_impl_sdl.cpp
src/realsim/utils/: StringUtils.cpp  StringUtils.h
tests/: dummy.cpp
